rerouted the styling and got rid of the ID in the top of the manager profile

--- a/output/index.html
+++ b/output/index.html
@@ -1,22 +1,21 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="assets/manager.css">
+<link rel="stylesheet" href="../templates/assets/manager.css">
 </head>
 <body>
        <div class="row">
            <div class="col-md-3">
         <div class="row" id="top">
             <br>
-            <p id="name">John</p>
+            <p id="name">Giuseppe</p>
             <p id="role">Manager</p>
-            <p id="id">234094</p>
             <br>
         </div>
        <div class="row" id="bottom">
            <table id="infotable">
-               <tr><td>ID: 234094</td></tr>
-               <tr><td>Office number: 140</td></tr>
+               <tr><td>ID: 234909</td></tr>
+               <tr><td>Office number: 405</td></tr>
            </table>
        </div>
        </div>
