--- a/output/index.html
+++ b/output/index.html
@@ -1,23 +1,99 @@
 <html>
-<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="../templates/assets/manager.css">
-</head>
-<body>
-       <div class="row">
-           <div class="col-md-3">
-        <div class="row" id="top">
-            <br>
-            <p id="name">Giuseppe</p>
-            <p id="role">Manager</p>
-            <br>
-        </div>
-       <div class="row" id="bottom">
-           <table id="infotable">
-               <tr><td>ID: 234909</td></tr>
-               <tr><td>Office number: 405</td></tr>
-           </table>
-       </div>
-       </div>
-</body>
-</html>
+  <head>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="../templates/assets/manager.css">
+  </head>
+  <body>
+  <div class="row">
+<div class="col-md-3">
+<div class="row" id="top">
+ <br>
+ <p id="name">k</p>
+ <p id="role">Manager</p>
+ <br>
+</div>
+<div class="row" id="bottom">
+<table id="infotable">
+    <tr><td>ID: 234</td></tr>
+    <tr><td>Office number: 2345</td></tr>
+</table>
+</div>
+</div>
+        <div class="row">
+    <div class="col-md-3">
+    <div class="row" id="top">
+     <br>
+     <p id="name">answers.engineerName1</p>
+     <p id="role">Manager</p>
+     <br>
+    </div>
+    <div class="row" id="bottom">
+    <table id="infotable">
+        <tr><td>ID: answers.engineerID1</td></tr>
+        <tr><td>GitHub: answers.engineerGitHub1</td></tr>
+    </table>
+    </div>
+    </div>
+    </div><div class="row">
+    <div class="col-md-3">
+    <div class="row" id="top">
+     <br>
+     <p id="name">answers.engineerName2</p>
+     <p id="role">Manager</p>
+     <br>
+    </div>
+    <div class="row" id="bottom">
+    <table id="infotable">
+        <tr><td>ID: answers.engineerID2</td></tr>
+        <tr><td>GitHub: answers.engineerGitHub2</td></tr>
+    </table>
+    </div>
+    </div>
+    </div><div class="row">
+    <div class="col-md-3">
+    <div class="row" id="top">
+     <br>
+     <p id="name">answers.engineerName3</p>
+     <p id="role">Manager</p>
+     <br>
+    </div>
+    <div class="row" id="bottom">
+    <table id="infotable">
+        <tr><td>ID: answers.engineerID3</td></tr>
+        <tr><td>GitHub: answers.engineerGitHub3</td></tr>
+    </table>
+    </div>
+    </div>
+    </div><div class="row">
+    <div class="col-md-3">
+    <div class="row" id="top">
+     <br>
+     <p id="name">answers.engineerName4</p>
+     <p id="role">Manager</p>
+     <br>
+    </div>
+    <div class="row" id="bottom">
+    <table id="infotable">
+        <tr><td>ID: answers.engineerID4</td></tr>
+        <tr><td>GitHub: answers.engineerGitHub4</td></tr>
+    </table>
+    </div>
+    </div>
+    </div><div class="row">
+    <div class="col-md-3">
+    <div class="row" id="top">
+     <br>
+     <p id="name">answers.engineerName5</p>
+     <p id="role">Manager</p>
+     <br>
+    </div>
+    <div class="row" id="bottom">
+    <table id="infotable">
+        <tr><td>ID: answers.engineerID5</td></tr>
+        <tr><td>GitHub: answers.engineerGitHub5</td></tr>
+    </table>
+    </div>
+    </div>
+    </div>
+  </body>
+  </html>
