added comments to my code and made the answer variable names for each set of prompts unique

--- a/output/index.html
+++ b/output/index.html
@@ -8,14 +8,14 @@
 <div class="col-md-3">
 <div class="row" id="top">
  <br>
- <p id="name">k</p>
+ <p id="name">sabrina</p>
  <p id="role">Manager</p>
  <br>
 </div>
 <div class="row" id="bottom">
 <table id="infotable">
-    <tr><td>ID: 34</td></tr>
-    <tr><td>Office number: 0</td></tr>
+    <tr><td>ID: 90</td></tr>
+    <tr><td>Office number: wowow</td></tr>
 </table>
 </div>
 </div>
@@ -24,28 +24,14 @@
     <div class="row" id="top">
      <br>
      <p id="name">answers.engineerName1</p>
-     <p id="role">Manager</p>
+     NaN
+     <p id="role">Engineer</p>
      <br>
     </div>
     <div class="row" id="bottom">
     <table id="infotable">
         <tr><td>ID: answers.engineerID1</td></tr>
         <tr><td>GitHub: answers.engineerGitHub1</td></tr>
-    </table>
-    </div>
-    </div>
-    </div><div class="row">
-    <div class="col-md-3">
-    <div class="row" id="top">
-     <br>
-     <p id="name">answers.engineerName2</p>
-     <p id="role">Manager</p>
-     <br>
-    </div>
-    <div class="row" id="bottom">
-    <table id="infotable">
-        <tr><td>ID: answers.engineerID2</td></tr>
-        <tr><td>GitHub: answers.engineerGitHub2</td></tr>
     </table>
     </div>
     </div>
