will need to examine code to ensure styling remains on HTML

--- a/output/index.html
+++ b/output/index.html
@@ -1,40 +1,18 @@
-<html>
-  <head>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="../templates/assets/manager.css">
-  </head>
-  <body>
-  <div class="row">
-<div class="col-md-3">
-<div class="row" id="top">
- <br>
- <p id="name">sabrina</p>
- <p id="role">Manager</p>
- <br>
-</div>
-<div class="row" id="bottom">
-<table id="infotable">
-    <tr><td>ID: 90</td></tr>
-    <tr><td>Office number: wowow</td></tr>
+<br>
+        <div class="row">
+            <div class="col-md-3">
+         <div class="row" id="top">
+             <br>
+             <p id="name">John</p>
+             <p id="role">Intern</p>
+             <br>
+         </div>
+        <div class="row" id="bottom">
+            <table id="infotable">
+                <tr><td>ID: 333</td></tr><tr><td>Current School: George Washington University</td></tr>
 </table>
 </div>
 </div>
-        <div class="row">
-    <div class="col-md-3">
-    <div class="row" id="top">
-     <br>
-     <p id="name">answers.engineerName1</p>
-     NaN
-     <p id="role">Engineer</p>
-     <br>
-    </div>
-    <div class="row" id="bottom">
-    <table id="infotable">
-        <tr><td>ID: answers.engineerID1</td></tr>
-        <tr><td>GitHub: answers.engineerGitHub1</td></tr>
-    </table>
-    </div>
-    </div>
-    </div>
-  </body>
-  </html>
+</div>
+</body>
+</html>
