--- a/output/index.html
+++ b/output/index.html
@@ -1,18 +1,54 @@
-<br>
+<html>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="../templates/assets/manager.css">
+</head>
+<body>
+       <div class="row">
+           <div class="col-md-3">
+        <div class="row" id="top">
+            <br>
+            <p id="name">Howard</p>
+            <p id="role">Manager</p>
+            <br>
+        </div>
+       <div class="row" id="bottom">
+           <table id="infotable">
+               <tr><td>ID: 234</td></tr>
+               <tr><td>Office number: 423</td></tr>
+           </table>
+       </div>
+       </div>
+       </div><br>
         <div class="row">
             <div class="col-md-3">
          <div class="row" id="top">
              <br>
-             <p id="name">John</p>
+             <p id="name">Jo</p>
              <p id="role">Intern</p>
              <br>
          </div>
         <div class="row" id="bottom">
             <table id="infotable">
-                <tr><td>ID: 333</td></tr><tr><td>Current School: George Washington University</td></tr>
+                <tr><td>ID: 234</td></tr><tr><td>Current School: Youngstown State</td></tr>
 </table>
 </div>
 </div>
-</div>
-</body>
-</html>
+</div><br>
+      <div class="row">
+                 <div class="col-md-3">
+              <div class="row" id="top">
+                  <br>
+                  <p id="name">Tyler</p>
+                  <p id="role">Engineer</p>
+                  <br>
+              </div>
+             <div class="row" id="bottom">
+                 <table id="infotable">
+                     <tr><td>ID: 232</td></tr><tr><td>GitHub account: <a href="https://www.github.com/Paul">Paul</a></td></tr>
+            </table>
+            </div>
+            </div>
+            </div>
+        </body>
+    </html>
