testing askTeamMemberQuestions functions

--- a/output/index.html
+++ b/output/index.html
@@ -8,15 +8,47 @@
            <div class="col-md-3">
         <div class="row" id="top">
             <br>
-            <p id="name">Sheila</p>
+            <p id="name">Howard</p>
             <p id="role">Manager</p>
             <br>
         </div>
        <div class="row" id="bottom">
            <table id="infotable">
-               <tr><td>ID: 42</td></tr>
-               <tr><td>Office number: 32</td></tr>
+               <tr><td>ID: 234</td></tr>
+               <tr><td>Office number: 423</td></tr>
            </table>
        </div>
        </div>
-       </div>
+       </div><br>
+      <div class="row">
+                 <div class="col-md-3">
+              <div class="row" id="top">
+                  <br>
+                  <p id="name">Ranjan</p>
+                  <p id="role">Engineer</p>
+                  <br>
+              </div>
+             <div class="row" id="bottom">
+                 <table id="infotable">
+                     <tr><td>ID: 232</td></tr><tr><td>GitHub account: <a href="https://www.github.com/Ranjan">Ranjan</a></td></tr>
+          </table>
+          </div>
+          </div>
+          </div><br>
+        <div class="row">
+            <div class="col-md-3">
+         <div class="row" id="top">
+             <br>
+             <p id="name">Shawn</p>
+             <p id="role">Intern</p>
+             <br>
+         </div>
+        <div class="row" id="bottom">
+            <table id="infotable">
+                <tr><td>ID: 343</td></tr><tr><td>Current School: George Washington University</td></tr>
+</table>
+</div>
+</div>
+</div>
+</body>
+</html>
